--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             
             // Инициализируем WebApp
             Telegram.WebApp.ready();
-            status.textContent = "WebApp инициализирован";
+            status.textContent = "Конкурс на более чем 1.000.000 Stars ⭐";
             
             btn.addEventListener('click', function() {
                 try {
