--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
     
     <section class="hero">
         <div class="container">
-            <h1 class="animate__animated animate__fadeInDown">Escrow Trust - Бот был обновлен, старая версия больше не активна</h1>
-            <p class="animate__animated animate__fadeInUp">Escrow Trust - ваш надёжный посредник в сделках. Мы гарантируем безопасность и честность каждой транзакции.</p>
+            <h1 class="animate__animated animate__fadeInDown">Escrow Trust - ваш надёжный посредник в сделках.</h1>
+            <p class="animate__animated animate__fadeInUp">Мы гарантируем безопасность и честность каждой транзакции в сделках на сумму более чем $55</p>
             <a href="https://t.me/EscrowTrustRobot" class="btn animate__animated animate__fadeIn">Начать сделку</a>
         </div>
     </section>
@@ -520,7 +520,7 @@
                 <a href="#">Политика конфиденциальности</a>
             </div>
             <div class="copyright">
-                © 2025 Escrow Trust. Все права защищены.
+                © 2025 Escrow Trust. Все права защищены. Финансовые вопросы и другие комерческие действия при ошибках в сделках принимаем в личных сообщениях - @EscrowHelps, Защита сделок и полный возрат средств от суммы $55
             </div>
         </div>
     </footer>
@@ -551,3 +551,4 @@
     </script>
 </body>
 </html>
+
