--- a/index1.html
+++ b/index1.html
@@ -402,7 +402,7 @@
                     </div>
                     <div class="logo-text">Escrow Trust</div>
                 </div>
-                <a href="https://t.me/EscrowTrustRobot" class="nav-btn">
+                <a href="https://t.me/EscrowTrustsRobot" class="nav-btn">
                     Перейти в бота <i class="fas fa-arrow-right"></i>
                 </a>
             </div>
@@ -413,7 +413,7 @@
         <div class="container">
             <h1 class="animate__animated animate__fadeInDown">Escrow Trust - ваш надёжный посредник в сделках.</h1>
             <p class="animate__animated animate__fadeInUp">Мы гарантируем безопасность и честность каждой транзакции в сделках на сумму более чем $55</p>
-            <a href="https://t.me/EscrowTrustRobot" class="btn animate__animated animate__fadeIn">Начать сделку</a>
+            <a href="https://t.me/EscrowTrustsRobot" class="btn animate__animated animate__fadeIn">Начать сделку</a>
         </div>
     </section>
     
@@ -515,8 +515,8 @@
         <div class="container">
             <div class="footer-logo">Escrow Trust</div>
             <div class="footer-links">
-                <a href="https://t.me/EscrowTrustRobot">Перейти в бота</a>
-                <a href="https://t.me/EscrowTrustSupport">Контакты</a>
+                <a href="https://t.me/EscrowTrustsRobot">Перейти в бота</a>
+                <a href="https://t.me/EscrowHelps">Контакты</a>
                 <a href="#">Политика конфиденциальности</a>
             </div>
             <div class="copyright">
@@ -551,4 +551,5 @@
     </script>
 </body>
 </html>
+
 
