--- a/index2.html
+++ b/index2.html
@@ -59,7 +59,7 @@
           <span class="caret" id="caret"></span>
         </span>
       </a>
-      <a class="second-line" href="https://t.me/suderza" target="_blank">big thank @Noverza for the advertising</a>
+      <a class="second-line" href="https://t.me/noverza" target="_blank">big thank @Noverza for the advertising</a>
     </div>
   </div>
 
@@ -194,4 +194,5 @@
   </script>
 </body>
 </html>
+
 
