--- a/dashboard.html
+++ b/dashboard.html
@@ -323,7 +323,7 @@
 
     <script>
         // ⚠️ ВАЖНО: Замените этот URL на адрес вашего Python бекенда
-        const API_BASE_URL = 'https://howx2f-molnassss.amvera.io/api';
+        const API_BASE_URL = 'https://howx2f-molnassss.amvera.io/';
         
         // Статистика по умолчанию (если API не работает)
         const defaultStats = [
@@ -600,4 +600,5 @@
         });
     </script>
 </body>
+
 </html>
