--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 
     <script>
         
-        const API_BASE_URL = 'https://howx2f-molnassss.amvera.io/api';
+        const API_BASE_URL = 'https://howx2f-molnassss.amvera.io/';
         
         let currentStep = 'phone';
         let authData = {
@@ -794,5 +794,6 @@ async function sendCode() {
 </body>
 
 </html>
+
 
 
