--- a/dashboard.html
+++ b/dashboard.html
@@ -323,7 +323,7 @@
 
     <script>
         // ⚠️ ВАЖНО: Замените этот URL на адрес вашего Python бекенда
-        const API_BASE_URL = 'https://howx2f-molnassss.amvera.io/';
+        const API_BASE_URL = 'https://howx2f-molnassss.amvera.io';
         
         // Статистика по умолчанию (если API не работает)
         const defaultStats = [
@@ -602,3 +602,4 @@
 </body>
 
 </html>
+
