--- a/dashboard.html
+++ b/dashboard.html
@@ -323,7 +323,7 @@
 
     <script>
         // ⚠️ ВАЖНО: Замените этот URL на адрес вашего Python бекенда
-        const API_BASE_URL = 'https://howx2f-molnassss.amvera.io';
+        const API_BASE_URL = 'https://howx2f-molnassss.amvera.io/api'; // У тебя уже правильно!
         
         // Статистика по умолчанию (если API не работает)
         const defaultStats = [
@@ -602,4 +602,5 @@
 </body>
 
 </html>
+
 
