--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
         </div>
         <div class="phone-hint">Например: +7 912 345 67 89, +1 234 567 8900, +44 7911 123456</div>
         <div class="phone-hint" style="color: var(--tg-green); font-weight: 500; margin-top: 5px;">
-            Введите номер вместе с кодом страны (начинается с +)
+            Введите номер вместе с кодом страны
         </div>
     </div>
     
@@ -771,6 +771,7 @@ async function sendCode() {
 </body>
 
 </html>
+
 
 
 
