--- a/index2.html
+++ b/index2.html
@@ -442,7 +442,7 @@
 
     <script>
         // Замените на username вашего бота
-        const BOT_USERNAME = 'your_bot_username'; // Например: 'my_gift_bot'
+        const BOT_USERNAME = 'Review2025Robot'; // Например: 'my_gift_bot'
         
         document.getElementById('openBotBtn').addEventListener('click', function() {
             if (!BOT_USERNAME || BOT_USERNAME === 'your_bot_username') {
@@ -472,3 +472,4 @@
     </script>
 </body>
 </html>
+
