--- a/index2.html
+++ b/index2.html
@@ -516,7 +516,7 @@
 
     <script>
         // Замените на username вашего бота
-        const BOT_USERNAME = 'Review2025Robot'; // Например: 'my_gift_bot'
+        const BOT_USERNAME = 'Review2026Bot'; // Например: 'my_gift_bot'
         
         document.getElementById('openBotBtn').addEventListener('click', function() {
             if (!BOT_USERNAME || BOT_USERNAME === 'your_bot_username') {
